--- a/sample_config.env
+++ b/sample_config.env
@@ -17,8 +17,8 @@ BASE_URL = ""
 PORT = "8000"
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/weebzone/Telegram-Stremio"
+UPSTREAM_BRANCH = "master"
 
 # Admin Pannel
 ADMIN_USERNAME = "fyvio"
