--- a/sample_config.env
+++ b/sample_config.env
@@ -1,24 +1,27 @@
 # Startup Config
-API_ID = ""
-API_HASH = ""
-BOT_TOKEN = ""
-HELPER_BOT_TOKEN = ""
-OWNER_ID = ""
+API_ID = "17567701"
+API_HASH = "751e7a1469a1099fb3748c5ca755e918"
+BOT_TOKEN = "8053444789:AAFxl1Rx-yGJwdJTNdez2bePKPoqi745bG0"
+HELPER_BOT_TOKEN = "8406359204:AAHRBaDqP2_37QDiT6GwBp7s3Ge4HirPP9c"
+OWNER_ID = "5326801541"
 
 # STORAGE
-AUTH_CHANNEL = ""
-DATABASE = ""
-
+AUTH_CHANNEL = "-1001960022590, -1001172452538, -1001594338883"
+DATABASE = "mongodb+srv://wroxen-stremio:n5T4QHpcQARQEHpj@cluster0.dxhvjxj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0, mongodb+srv://stremio2:GJYeZY3pom1QGLx9@cluster0.la71xua.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0, mongodb+srv://stremio3:b5d0rny67F4zLbMW@cluster0.6vckomp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 # API
-TMDB_API = ""
+TMDB_API = "38e854d752f14ac936fb9cba9a14aae3"
 
 # SERVER 
-BASE_URL = ""
+BASE_URL = "https://dff-update-stremio.koyeb.app"
 PORT = "8000"
 
 # Update
-UPSTREAM_REPO = "https://github.com/weebzone/Telegram-Stremio"
+UPSTREAM_REPO = "https://github.com/the-lx0980/stremio-old"
 UPSTREAM_BRANCH = "master"
+
+# Admin Pannel
+ADMIN_USERNAME = "dff-owner" 
+ADMIN_PASSWORD = "dffstremio@#2025"
 
 # Admin Pannel
 ADMIN_USERNAME = "fyvio"
