--- a/sample_config.env
+++ b/sample_config.env
@@ -6,7 +6,7 @@ HELPER_BOT_TOKEN = "8258722448:AAHRNyA6oYEoUybMqcvEBEoTA_b_WoxYE7Y"
 OWNER_ID = "5326801541"
 
 # STORAGE
-AUTH_CHANNEL = "-1001960022590, -1001172452538, -1001594338883"
+AUTH_CHANNEL = "-1001849863302"
 DATABASE = "mongodb+srv://wroxen-stremio:n5T4QHpcQARQEHpj@cluster0.dxhvjxj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0, mongodb+srv://stremio2:GJYeZY3pom1QGLx9@cluster0.la71xua.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0, mongodb+srv://stremio3:b5d0rny67F4zLbMW@cluster0.6vckomp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 # API
 TMDB_API = "38e854d752f14ac936fb9cba9a14aae3"
@@ -23,9 +23,6 @@ UPSTREAM_BRANCH = "master"
 ADMIN_USERNAME = "dff-owner" 
 ADMIN_PASSWORD = "dffstremio@#2025"
 
-# Admin Pannel
-ADMIN_USERNAME = "fyvio"
-ADMIN_PASSWORD = "fyvio"
 
 # Additional CDN Bots
 # MULTI_TOKEN1 = ""
